# recipe_book

./: Cargo.toml  README.md  test.json  wtf.txt
recipes/baking/: carrot_bread.json
recipes/wip/: Cheesy Hash Brown Casserole.json  Creamy Herb Chicken.json  Easy Lemon Chicken Recipe.json  Garlic Butter Chicken.json  Homemade Carrot Bread.json  Instant Pot Turkey Breast and Gravy.json  Marry Me Chicken.json  Million Dollar Chicken Casserole.json  Roasted Spatchcock Chicken (Butterflied Chicken).json  Smothered Turkey Wings.json  Thai Chicken and Cucumber Salad.json
src/: functions.rs  lib.rs  main.rs
src/data_types/: mixed_rational.rs  mod.rs  planning.rs  recipe.rs  units.rs
src/data_types/web_scraper/: mod.rs  recipe_scraper.rs
temp/: Cheesy_Hash_Brown_Casserole.json  Easy_Lemon_Chicken_Recipe.json  Garlic_Butter_Chicken.json  Garlic_Butter_Chicken_Bites_with_Lemon_Asparagus.json  Homemade_Carrot_Bread.json  Instant_Pot_Turkey_Breast_and_Gravy.json  Marry_Me_Chicken.json  Million_Dollar_Chicken_Casserole.json  Roasted_Spatchcock_Chicken_(Butterflied_Chicken).json  Smothered_Turkey_Wings.json  Thai_Chicken_and_Cucumber_Salad.json  recipes_11449.json  recipes_2273.json  recipes_4760.json  recipes_6422.json  recipes_7629.json  recipes_7886.json  recipes_8271.json  recipes_8489.json  recipes_9105.json  recipes_9909.json  scrape_history.json
